ws_controller/log/build_2025-08-22_15-17-09/flask_pkg/stderr.log
  File "/home/dron/ws_controller/install/flask_pkg/lib/python3.10/site-packages/flask_pkg/flask_server.py", line 6
    from flask import Flask, render_template, jsonify, request, make_response. redirect
                                                                             ^
SyntaxError: invalid syntax

